--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,17 @@
   "description": "A simple Express server project using TypeScript.",
   "main": "src/app.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "start": "nodemon src/app.ts",
     "build": "tsc",
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^3.1.9"
+    "ejs": "^3.1.10",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
