--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.17.1"
   },
