--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple Express server project using TypeScript.",
   "main": "src/app.ts",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/app.ts",
     "build": "tsc",
@@ -11,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
