--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,47 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "A simple Express server project using TypeScript.",
-  "main": "src/app.ts",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.ts",
-    "build": "tsc",
-    "dev": "ts-node-dev src/app.ts"
+    "start": "node --loader ts-node/esm src/index.ts",
+    "start:dev": "nodemon",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
+  },
+  "overrides": {
+    "eslint": "^9.22.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.17.1",
-    "mongoose": "^8.12.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.9.5"
-  },
-  "author": "Makai Post",
-  "license": "ISC"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "morgan": "^1.10.0"
+  }
 }
