--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "@tsconfig/node20": "^20.1.4",
     "@tsconfig/node22": "^22.0.0",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.10",
     "eslint": "^9.22.0",
@@ -40,8 +42,14 @@
     "eslint": "^9.22.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/mongoose": "^5.11.96",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0"
   }
 }
