--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node --loader ts-node/esm src/index.ts",
+    "start": "node --loader ts-node/esm src/server.ts",
     "start:dev": "nodemon",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -18,6 +18,7 @@
     "@eslint/js": "^9.22.0",
     "@tsconfig/node20": "^20.1.4",
     "@tsconfig/node22": "^22.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
@@ -45,6 +46,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
